# test1

./: .gitmodules  README.md
DICMFramework/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FrameworkDefaults.cmake  README.md  partitions-hmi.csv  partitions-hmi_8MB_secure.csv  partitions.csv  partitions_8MB_secure.csv  partitions_secure.csv  secure_boot_signing_key.pem  secure_boot_signing_key_dev.pem  secure_boot_signing_key_rsa.pem
DICMFramework/.github/: release.yml
DICMFramework/.github/workflows/: validations.yml
DICMFramework/DICMCommonLibs/: .gitignore  .gitmodules  CMakeLists.txt  README.md  sorted_list.c.template  sorted_list.h.template
DICMFramework/DICMCommonLibs/.github/: labeler.yml
DICMFramework/DICMCommonLibs/.github/workflows/: pull_request.yml  validations.yml
DICMFramework/DICMCommonLibs/ddm/: CMakeLists.txt  ddm.c  encapsulation.c  json.c  mpsc_cqueue.c  parameters.c
DICMFramework/DICMCommonLibs/ddm/include/: ddm.h  ddmp.h  encapsulation.h  json.h  parameters.h
DICMFramework/DICMCommonLibs/ddm2/: README.md
DICMFramework/DICMCommonLibs/ddm2/doc/: Connectivity_parameters_under_work.xlsm
DICMFramework/DICMCommonLibs/ddm2/gui/: ddm2_parameter_list.ddm2
DICMFramework/DICMCommonLibs/ddm2/include/: ddm2_parameter_list.h  miniddm_parameter_list.h
DICMFramework/DICMCommonLibs/ddm2/source/: ddm2_parameter_list.c  ddm2_parameter_list.js  ddm2_parameter_list.py  ddm2_parameter_list.ts  ddm2_params.json  miniddm_parameter_list.c
DICMFramework/DICMCommonLibs/include/: ame.h  ame_calibration.h  ame_calibration_xfer.h  bsec_serialized_configurations_iaq.h  crc.h  crc16.h  crc32.h  crc8.h  dcp_encapsulation.h  ddm2.h  ddm_entry.h  ddm_store.h  default_configuration.h  fsm.h  hsm.h  linear_interpolation.h  lis2dh12_reg.h  mps.h  neo_matrix.h  nmea_types.h  pool_allocator.h  ringbuffer.h  ringbuffer2.h  sdp32.h  sorted_container.h  sorted_list.h  sorted_list64.h  sorted_list_ptr.h  std_dometic.h  tiny-aes.h  uart_encapsulation.h  update_service_types.h  utils.h
DICMFramework/DICMCommonLibs/include/bsec_1_x/: bsec_datatypes.h  readme.txt
DICMFramework/DICMCommonLibs/source/: ame.c  ame_calibration.c  ame_calibration_xfer.c  bsec_serialized_configurations_iaq.c  crc16.c  crc32.c  crc8.c  dcp_encapsulation.c  ddm2.c  ddm_entry.c  ddm_store.c  fsm.c  hmac_sha256.c  linear_interpolation.c  lis2dh12_reg.c  lis2dw12_reg.c  mps.c  neo_matrix.c  pool_allocator.c  ringbuffer.c  ringbuffer2.c  sdp32.c  sha256_ext.c  sorted_container.c  sorted_list.c  sorted_list64.c  sorted_list_ptr.c  uart_encapsulation.c  utils.c
DICMFramework/DICMCommonLibs/test/: dcp_encapsulation.cpp  ddm2.cpp  ddm_entry.cpp  uart_encapsulation.cpp
DICMFramework/DICMCommonLibs/unittest/: ddm_entry_ut.cpp  ddm_store_ut.cpp  ringbuffer2_ut.cpp  sorted_container_ut.cpp  sorted_list_ut.cpp
DICMFramework/DICMCore/: CMakeLists.txt
DICMFramework/DICMCore/DICMBroker/: CMakeLists.txt
DICMFramework/DICMCore/DICMConnectors/: CMakeLists.txt
DICMFramework/DICMGeneralDefinitions/: CMakeLists.txt
DICMFramework/DICMGeneralDefinitions/include/: iGeneralDefinitions.h
DICMFramework/DICMHal/: CMakeLists.txt  README.md
DICMFramework/DICMHal/include/: dicm.h  hal_adc.h  hal_analog.h  hal_can.h  hal_cpu.h  hal_ethnet.h  hal_ethnet_common.c  hal_gpio.h  hal_i2c_master.h  hal_i2cdev.h  hal_initialize.h  hal_ledc.h  hal_mem.h  hal_nvmc.h  hal_nvs.h  hal_pmic.h  hal_pwm.h  hal_rtc.h  hal_scheduler.h  hal_spi_master.h  hal_system.h  hal_timer.h  hal_types.h  hal_uart.h  hal_uart_modem.h
DICMFramework/DICMHal/source/: hal_gpio.c  hal_initialize.c  hal_ledc.c  hal_rtc.c
DICMFramework/DICMHal/test/: test_hal_gpio.cpp  test_hal_mem.cpp
DICMFramework/DICMOsal/: CMakeLists.txt
DICMFramework/DICMOsal/include/: osal.h
DICMFramework/components/component_mgr/: CMakeLists.txt  idf_component.yml.orig
DICMFramework/components/esp_app_format/: esp_app_desc.c
DICMFramework/components/esp_netif_linux/: CMakeLists.txt
DICMFramework/components/esp_partition/: partition.c
DICMFramework/components/linux/: CMakeLists.txt
DICMFramework/components/mocks/: CMakeLists.txt  efuse.c  linux_dicmframework_setup.c  linux_dicmframework_setup.h
DICMFramework/components/modem/: CMakeLists.txt  Kconfig
DICMFramework/components/spiffs_image/: CMakeLists.txt
DICMFramework/include/: DICMFramework.h  configuration.h  load_configurations.h  network_discovery.h  udp_logger.h
DICMFramework/main/: main.c
DICMFramework/sdkconfig/4.x/: sdkconfig.defaults  sdkconfig.defaults.devsec  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.defaults.linux
DICMFramework/sdkconfig/5.x/: sdkconfig.defaults  sdkconfig.defaults.8MB  sdkconfig.defaults.8MB.hmi.secure  sdkconfig.defaults.8MB.secure  sdkconfig.defaults.boot.dev  sdkconfig.defaults.boot.prod  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.linux  sdkconfig.defaults.pm  sdkconfig.defaults.pm.5.3.4  sdkconfig.defaults.pm.esp32  sdkconfig.defaults.pm.esp32s3  sdkconfig.defaults.secure  sdkconfig.defaults.secure.efuse  sdkconfig.defaults.tls
DICMFramework/source/: DICMFramework.c  configuration.c  load_configurations.c  load_configurations_configuration.h  network_discovery.c  rtc_watchdog.c  rtc_watchdog.h  udp_logger.c
DICMFramework/source/log_service/: CMakeLists.txt
DICMFramework/source/pm/: CMakeLists.txt
DICMFramework/test/include/: DICMFrameworkTestFixture.hpp
DICMFramework/tools/cmake/: CodeCoverage.cmake  GTestCMakeLists.txt.in  GitDICMVersion.h.in  GitVersion.h.in  file_system_version.in  framework_setup.cmake  generate_dicmversion.cmake  generate_version.cmake  hmi_data-version.cmake.in  unittest_setup.cmake
DICMFramework/tools/hmi_data_build/: CMakeLists.txt  extflash.h  hmi.ld  main.c
DICMFramework/tools/python/: update_gtest_times.py  update_testsuite_names.py
DICMFramework/tools/scripts/: b.bat  build-in-docker.sh  c.bat  clean.bat  f-hmi.bat  f.bat  fe.bat  init_path.bat  m.bat  run-build.sh  run-tests.sh  test-in-docker.sh
(+656 files in other folders)
